# AI-E-commerce-Design-Studio

./: .gitignore  CONFIGURATION.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  GOOGLE_OAUTH_FIX.md  QUICKSTART.md  QUICK_START.md  README.md  app.py  index.py  package.json  pyproject.toml  vercel.json  电商海报MVP需求文档-26.3.18.docx
api/: index.py  pyproject.toml
api/app/services/: qwen_service.py
app/: __init__.py  main.py  models.py  schemas.py
app/routers/: payments.py  users.py
backend/: .env.example  README.md  requirements-vercel.txt  requirements.txt  vercel.json
backend/api/: health.py  index.py  test.py  test_fastapi.py  vercel_handler.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  users.py
backend/scripts/: reset_db.py
docs/: API_EXAMPLES.md  ROADMAP.md  requirements.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: BUILD_ID  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: 404.html  500.html  editor.html  index.html  index.js.nft.json  login.html  pricing.html  signup.html  signup.js.nft.json
frontend/src/lib/: auth.ts
frontend/src/pages/: editor.tsx  editor.tsx.bak  index.tsx  login.tsx  pricing.tsx  profile.tsx  signup.tsx
frontend/src/store/: posterStore.ts
frontend/src/styles/: globals.css
(+25 files in other folders)
