[project]
name = "ai-poster-studio"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "starlette==0.35.0",
    "asgiref==3.7.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "httpx==0.26.0",
    "authlib==1.3.0",
    "cryptography==42.0.0",
    "boto3==1.34.0",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "python-jose[cryptography]==3.3.0",
    "loguru==0.7.2",
]

[project.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port $PORT"
